# rite

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.base  Dockerfile.custom  Dockerfile.extended  README.md  a.out  build-image.sh  log4rs.yaml  rite.code-workspace  rite.sh  rite.sh.md  user-doc.md  write-a-plugin.md
base/plugins/common/: Cargo.toml  README.md  exporter.md  importer.md  mapper.md  transformer.md
base/plugins/common/src/: exporter.rs  lib.rs  transformer.rs
base/plugins/common/src/console/: tests.rs
base/plugins/common/src/exporter/: console.rs  template.rs
base/plugins/common/src/importer/: env.rs
base/plugins/common/src/template/: tests.rs
base/plugins/common/src/transformer/: common.rs  mapper.rs
base/plugins/csv/: Cargo.toml  README.md
base/plugins/csv/src/: csv.rs  lib.rs
base/plugins/csv/src/csv/: exporter.rs  importer.rs
base/plugins/faker/: Cargo.toml  README.md
base/plugins/faker/src/: importers.rs  lib.rs
base/plugins/faker/src/importers/: functions.rs
base/plugins/llm/: Cargo.toml  README.md
base/plugins/llm/src/: common.rs  importers.rs  lib.rs
base/plugins/llm/src/common/: response.rs  tests.rs
base/plugins/llm/src/importers/: gemini.rs  ollama.rs
base/plugins/mariadb/: Cargo.toml  README.md
base/plugins/mariadb/src/: exporter.rs  importer.rs  lib.rs
base/plugins/mariadb/src/exporter/: config.rs  initializable.rs  sql.rs  tests.rs
base/plugins/mariadb/src/importer/: config.rs  tablerow.rs  tests.rs
base/plugins/postgres/: Cargo.toml  README.md
base/plugins/postgres/src/: common.rs  embedded.rs  exporter.rs  importer.rs  lib.rs
base/plugins/postgres/src/exporter/: config.rs  sql.rs  tests.rs
base/plugins/postgres/src/importer/: config.rs  tests.rs  types.rs
base/plugins/rest/: Cargo.toml  README.md
base/plugins/rest/src/: importer.rs  lib.rs
base/plugins/rest/src/importer/: tests.rs
base/plugins/sqlite/: Cargo.toml  README.md
base/plugins/sqlite/src/: exporter.rs  importer.rs  lib.rs
base/plugins/sqlite/src/exporter/: config.rs  sql.rs
base/plugins/sqlite/src/importer/: config.rs
base/rite/: Cargo.toml  README.md  build.rs
base/rite/proto/rite/v1/: service.proto
base/rite/src/: lib.rs  main.rs  variables.rs
base/rite/src/processor/: process.rs  rite.rs  tests.rs
base/rite/src/processor/process/: exporter.rs  importer.rs  transformer.rs
base/rite/src/processor/rite/: tests.rs
base/rite/src/server/: main.rs  protection.rs  proto.rs  reflection.rs  rite_service.rs
base/rite/src/server/rite_service/: processor.rs
base/rite/src/tests/: manual.rs
base/rite/tests/: tests.rs
custom/plugins/ciao/: Cargo.toml  README.md
custom/plugins/ciao/ciao-rs/: .gitmodules  Cargo.toml  README.md  build.rs  ciao-rs.code-workspace
custom/plugins/ciao/ciao-rs/ciao-proto/: .gitignore  README.md  (+1 more)
custom/plugins/ciao/doc/: exporters.md  importers.md
custom/plugins/ciao/src/: config.rs  exporters.rs  importers.rs  lib.rs  model.rs
examples/example_export/: Cargo.toml
examples/example_export/src/: console.rs  lib.rs
examples/example_export/src/console/: tests.rs
examples/example_import/: Cargo.toml
examples/example_import/src/: lib.rs  text.rs
examples/example_import/src/text/: tests.rs
examples/example_transform/: Cargo.toml
examples/example_transform/src/: lib.rs  string.rs
examples/example_transform/src/string/: doubler.rs  test.rs
extended/plugins/personio/: Cargo.toml  README.md
extended/plugins/personio/data/: employee_fields.txt
extended/plugins/personio/src/: lib.rs  macros.rs
extended/plugins/youtrack/: Cargo.toml  README.md
extended/plugins/youtrack/src/: importers.rs  lib.rs
libraries/plugin/: Cargo.toml
model/: Cargo.toml
model/src/: field.rs  lib.rs  record.rs  value.rs  xml.rs
model/src/field/: tests.rs
model/src/record/: tests.rs
model/src/value/: from.rs
model/src/xml/: config.rs  exporter.rs  file.rs  import.rs  plugin.rs  process.rs  test.rs  transformer.rs
model/src/xml/file/: substitute.rs
plugins/atc/: Cargo.toml  build.rs
plugins/atc/proto/: buf.yaml
plugins/atc/proto/atc/: buf.yaml
plugins/atc/src/: connection.rs  lib.rs
plugins/atc/src/connection/: clients.rs  config.rs
plugins/atc/src/importers/: clock_records.rs  common.rs  dataset.rs
plugins/ciao/: Cargo.toml  README.md
plugins/ciao/src/: config.rs  connection.rs  exporters.rs  importers.rs  lib.rs
plugins/ciao/src/connection/: tests.rs
plugins/ciao/src/exporters/: accounts.rs  clock_entries.rs  cost_centers.rs  project_tasks.rs  projects.rs
plugins/ciao/src/importers/: accounts.rs  clock_entries.rs  cost_centers.rs  devices.rs  projects.rs  time_types.rs
plugins/common/: Cargo.toml  README.md  mapper.md
plugins/common/src/: console.rs  lib.rs  template.rs  transformer.rs
plugins/common/src/console/: tests.rs
plugins/common/src/template/: tera.rs  tests.rs
plugins/common/src/transformer/: common.rs  mapper.rs  operations.rs
plugins/common_transformers/: Cargo.toml
plugins/common_transformers/src/: lib.rs  transformer.rs
plugins/csv/: Cargo.toml  README.md
plugins/csv/src/: csv.rs  lib.rs
plugins/csv/src/csv/: importer.rs
plugins/personio/: Cargo.toml  README.md  login.sh
plugins/personio/data/: custom_attributes.json
plugins/personio/src/: importers.rs  lib.rs  macros.rs
plugins/personio/src/importers/: absences.rs  attendances.rs  configuration.rs  employees.rs  pagination.rs  projects.rs
plugins/postgres/: Cargo.toml
plugins/postgres/src/: common.rs  exporter.rs  importer.rs  lib.rs
plugins/postgres/src/exporter/: config.rs  sql.rs
plugins/postgres/src/importer/: config.rs
plugins/youtrack/: Cargo.toml  README.md
plugins/youtrack/src/: importers.rs  lib.rs
plugins/youtrack/src/importers/: config.rs  connection.rs  generic.rs  issues.rs  rest.rs  tests.rs  time.rs  youtrack.rs
rite/: Cargo.toml
rite/src/: main.rs  processor.rs  tests.rs
rite/src/processor/: process.rs  rite.rs  tests.rs
rite/src/processor/process/: exporter.rs  importer.rs
rite/src/tests/: manual.rs  xml.rs
(+456 files in other folders)
