[workspace]
resolver = "2"
members = [ 
    "libraries/export", 
    "libraries/helper",
    "libraries/import", 
    "libraries/model", 
    "libraries/transform", 
    "libraries/plugin", 
    "rite", 
    "examples/example_import", 
    "examples/example_export", 
    "examples/example_transform", 
    "plugins/postgres", 
    "plugins/rest", 
    "plugins/common", 
    "plugins/youtrack", 
    "plugins/ciao", 
    "plugins/faker", 
    "plugins/csv", 
    "plugins/atc", 
    "plugins/personio"
]
