[workspace]
resolver = "2"
members = [ 
    "libraries/plugin", 
    "examples/example_import", 
    "examples/example_export", 
    "examples/example_transform", 
    "base/rite", 
    "base/plugins/common", 
    "base/plugins/postgres", 
    "base/plugins/rest", 
    "base/plugins/faker", 
    "base/plugins/csv", 
    "extended/plugins/youtrack", 
    "extended/plugins/personio",
    "custom/plugins/atc", 
    "custom/plugins/ciao", 
]
