[package]
name = "model"
version = "0.1.0"
edition = "2021"
authors = ["Andreas Blochberger"]
description = "RITE model"
readme = "README.md"
repository = "https://github.com/CIAO-systems/rite"
license = "Apache-2.0"

publish = ["kellnr"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.5"
subst = "0.3"
xml-rs = "0.8"
