[package]
name = "rite"
version = "0.1.0"
edition = "2021"
publish = ["kellnr"]

[dependencies]
model = { version="0.1.0", path="../model" }
helper = { version="0.1.0", path="../helper" }
plugin = { version="0.1.0", path="../plugin" }
import = { version="0.1.0", path="../import" }
export = { version="0.1.0", path="../export" }
transform = { version="0.1.0", path="../transform" }
gag = "1.0"
log = "0.4"
log4rs = "1.3"
moka = {version="0.12", features = ["sync"]}
clap = { version= "4.5", features = ["derive"] }
