[package]
name = "rite"
version = "0.1.2"
edition = "2021"
description = "RITE - rust import/transform/export"
readme = "README.md"
repository = "https://github.com/CIAO-systems/rite"
license = "Apache-2.0"
publish = ["kellnr"]

[dependencies]
model = { version="0.1", registry="kellnr", path="../model" }
helper = { version="0.1.0", path="../helper", registry="kellnr" }
plugin = { version="0.1.0", path="../plugin", registry="kellnr" }
import = { version="0.1.0", path="../import", registry="kellnr" }
export = { version="0.1.0", path="../export", registry="kellnr" }
transform = { version="0.1.0", path="../transform", registry="kellnr" }
gag = "1.0"
log = "0.4"
log4rs = "1.3"
moka = {version="0.12", features = ["sync"]}
clap = { version= "4.5", features = ["derive"] }
dotenv = "0.15.0"
colored = "3.0.0"
