[package]
name = "rite"
version = "0.1.2"
edition = "2021"
description = "RITE - rust import/transform/export"
readme = "README.md"
repository = "https://github.com/CIAO-systems/rite"
license = "Apache-2.0"
publish = ["kellnr"]

[dependencies]
model = { version="0.1", registry="kellnr", path="../libraries/model" }
helper = { version="0.1.0", path="../libraries/helper", registry="kellnr" }
plugin = { version="0.1.0", path="../libraries/plugin", registry="kellnr" }
import = { version="0.1.0", path="../libraries/import", registry="kellnr" }
export = { version="0.1.0", path="../libraries/export", registry="kellnr" }
transform = { version="0.1.0", path="../libraries/transform", registry="kellnr" }
gag = "1.0"
log = "0.4"
log4rs = "1.3"
moka = {version="0.12", features = ["sync"]}
clap = { version= "4.5", features = ["derive"] }
dotenv = "0.15.0"
colored = "3.0.0"
