[package]
name = "rite"
version = "0.2.0"
edition = "2021"
description = "RITE - rust import/transform/export"
readme = "README.md"
repository = "https://github.com/CIAO-systems/rite"
license = "Apache-2.0"

[dependencies]
model = { git = "https://github.com/CIAO-systems/rite-lib-model.git", branch = "main" }
gag = "1.0"
log = "0.4"
log4rs = "1.3"
moka = {version="0.12", features = ["sync"]}
clap = { version= "4.5", features = ["derive"] }
dotenv = "0.15"
colored = "3.0"
tonic = "0.13"
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1.45", features = ["full"] }
once_cell = "1.21"
anyhow = "1.0"
tonic-reflection = "0.13"
zip = "4.2"
uuid = { version = "1.17.0", features = ["v4"] }

[build-dependencies]
prost-build = "0.13"
tonic-build = "0.13"


[[bin]]
name ="rite"
path = "src/main.rs"

[[bin]]
name ="rite-server"
path = "src/server/main.rs"
