[package]
name = "example_export"
version = "0.1.1"
edition = "2021"
description = "RITE example exporter"
# readme = "README.md"
repository = "https://github.com/CIAO-systems/rite"
license = "Apache-2.0"
publish = ["kellnr"]

[dependencies]
gag = "1.0.0"
model = { version="0.1", registry="kellnr", path="../../libraries/model" }
export = { version="0.1", registry="kellnr", path="../../libraries/export" }
helper = { version="0.1", registry="kellnr", path="../../libraries/helper" }

[lib]
name = "example_export"
crate-type = ["dylib"]