[package]
name = "example_export"
version = "0.1.1"
edition = "2021"
description = "RITE example exporter"
# readme = "README.md"
repository = "https://github.com/CIAO-systems/rite"
license = "Apache-2.0"

[dependencies]
gag = "1.0.0"
model = { git = "https://github.com/CIAO-systems/rite-lib-model.git" }
export = { version="0.1", path="../../libraries/export" }
helper = { git = "https://github.com/CIAO-systems/rite-lib-helper.git" }

[lib]
name = "example_export"
crate-type = ["dylib"]