[package]
name = "example_export"
version = "0.1.1"
edition = "2024"
description = "RITE example exporter"
# readme = "README.md"
repository = "https://github.com/CIAO-systems/rite"
license = "Apache-2.0"

[dependencies]
model = { git = "https://github.com/CIAO-systems/rite-lib-model.git", branch = "main" }
gag = "1.0.0"

[lib]
name = "example_export"
crate-type = ["dylib"]