[package]
name = "example_import"
version = "0.1.1"
edition = "2021"
description = "RITE example importer"
repository = "https://github.com/CIAO-systems/rite"
license = "Apache-2.0"

[dependencies]
model = { version="0.1", path="../../libraries/model" }
import = { version="0.1", path="../../libraries/import" }
helper = { version="0.1", path="../../libraries/helper" }

[lib]
name = "example_import"
crate-type = ["dylib"]