[package]
name = "example_transform"
version = "0.1.1"
edition = "2021"
description = "RITE transformer importer"
repository = "https://github.com/CIAO-systems/rite"
license = "Apache-2.0"
publish = ["kellnr"]

[dependencies]
model = { version="0.1", registry="kellnr", path="../../libraries/model" }
transform = { version="0.1", registry="kellnr", path="../../libraries/transform" }
helper = { version="0.1", registry="kellnr", path="../../libraries/helper" }


[lib]
name = "example_transform"
crate-type = ["dylib"]