[package]
name = "example_transform"
version = "0.1.1"
edition = "2024"
description = "RITE transformer importer"
repository = "https://github.com/CIAO-systems/rite"
license = "Apache-2.0"

[dependencies]
model = { git = "https://github.com/CIAO-systems/rite-lib-model.git", branch = "main" }


[lib]
name = "example_transform"
crate-type = ["dylib"]