[package]
name = "plugin"
version = "0.1.0"
edition = "2021"
description = "Plugin support library"
readme = "README.md"
repository = "https://github.com/CIAO-systems/rite"
license = "Apache-2.0"

[dependencies]
import = { version="0.1.0", path="../import" }
export = { version="0.1.0", path="../export" }
transform = { version="0.1.0", path="../transform" }

libloading = "0.8"
log = "0.4"
log4rs = "1.3"
