[package]
name = "rite_atc"
version = "0.1.0"
edition = "2021"

[dependencies]
model = { version="0.1", registry="kellnr", path="../../libraries/model" }
import = { version="0.1.0", registry="kellnr", path="../../libraries/import" }
grpc-utils-rs = { git="https://github.com/CIAO-systems/grpc-utils-rs" }

log = "0.4"
prost = "0.13"
tonic = { version="0.12", features=["tls-roots"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
prost-types = "0.13"
tonic-reflection = "0.12.3"
tokio-stream = "0.1.17"
base64 = "0.22.1"
chrono = "0.4.40"

[lib]
name = "rite_atc"
crate-type = ["dylib"]

[[bin]]
name = "reflection"
path = "bin/reflection.rs"

[build-dependencies]
tonic-build = "0.12.3"
helper = { version = "0.1.0", path = "../../libraries/helper" }
prost-build = "0.13.5"
