[package]
name = "rite_common_transformers"
version = "0.1.0"
edition = "2021"
description = "RITE common transformers"
readme = "README.md"
repository = "https://github.com/CIAO-systems/rite"
license = "Apache-2.0"
publish = ["kellnr"]

[dependencies]
model = { version="0.1.0", registry="kellnr" }
transform = { version="0.1.0", registry="kellnr", path="../../transform" }
uuid = { version = "1.11", features = ["v4"] }


[lib]
name = "rite_common_transformers"
crate-type = ["dylib"]
