[package]
name = "rite_csv"
version = "0.1.0"
edition = "2021"

[dependencies]
model = { version="0.1", registry="kellnr", path="../../model" }
import = { version="0.1.0", registry="kellnr", path="../../import" }
export = { version="0.1.0", registry="kellnr", path="../../export" }
log = "0.4"
csv = "1.3"


[lib]
name = "rite_csv"
crate-type = ["dylib"]
