[package]
name = "rite_personio"
version = "0.1.0"
edition = "2024"

[dependencies]
model = { version="0.1", registry="kellnr", path="../../model" }
import = { version="0.1.0", registry="kellnr", path="../../import" }
personio-rs = { git = "https://github.com/CIAO-systems/personio-rs" }
tokio = { version = "1", features = ["full", "test-util"] }

[lib]
name = "rite_personio"
crate-type = ["dylib"]
