[package]
name = "rite_personio"
version = "0.1.0"
edition = "2024"

[dependencies]
model = { version="0.1", registry="kellnr", path="../../libraries/model" }
import = { version="0.1.0", registry="kellnr", path="../../libraries/import" }
personio-rs = { git = "https://github.com/CIAO-systems/personio-rs" }
tokio = { version = "1", features = ["full", "test-util"] }
log = "0.4.27"

[lib]
name = "rite_personio"
crate-type = ["dylib"]
