[package]
name = "rite_youtrack"
version = "0.1.0"
edition = "2021"
description = "RITE YouTrack plugin"
readme = "README.md"
repository = "https://github.com/CIAO-systems/rite"
license = "Apache-2.0"
publish = ["kellnr"]

[dependencies]
model = { version="0.1", registry="kellnr", path="../../model" }
import = { version="0.1", registry="kellnr", path="../../import" }
log = "0.4"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.5"
chrono = "0.4"

[lib]
name = "rite_youtrack"
crate-type = ["dylib"]

