[package]
name = "rite_common"
version = "0.1.2"
edition = "2021"
description = "RITE common transformers/exporters"
readme = "README.md"
repository = "https://github.com/CIAO-systems/rite"
license = "Apache-2.0"

[dependencies]
model = { version="0.1", path="../../../libraries/model" }
transform = { version="0.1", path="../../../libraries/transform" }
export = { version="0.1", path="../../../libraries/export" }
uuid = { version = "1.11", features = ["v4"] }
gag = "1.0"
chrono = "0.4"
serde = "1.0"
serde-xml-rs = "0"
log = "0.4.25"
tera = "1.20.0"
regex = "1.11.1"


[lib]
name = "rite_common"
crate-type = ["dylib"]
