[package]
name = "rite_common"
version = "0.1.3"
edition = "2024"
description = "RITE common transformers/exporters"
readme = "README.md"
repository = "https://github.com/CIAO-systems/rite"
license = "Apache-2.0"

[dependencies]
model = { git = "https://github.com/CIAO-systems/rite-lib-model.git" }
import = { git = "https://github.com/CIAO-systems/rite-lib-import.git" }
transform = { git = "https://github.com/CIAO-systems/rite-lib-transform.git" }
export = { git ="https://github.com/CIAO-systems/rite-lib-export.git" }
uuid = { version = "1.11", features = ["v4"] }
gag = "1.0"
chrono = "0.4"
serde = "1.0"
serde-xml-rs = "0.8.0"
log = "0.4.25"
tera = "1.20.0"
regex = "1.11.1"

[dev-dependencies]
tempfile = "3.9"

[lib]
name = "rite_common"
crate-type = ["dylib"]
