[package]
name = "rite_csv"
version = "0.1.0"
edition = "2021"

[dependencies]
model = { version="0.1", path="../../../libraries/model" }
import = { version="0.1.0", path="../../../libraries/import" }
export = { version="0.1.0", path="../../../libraries/export" }
log = "0.4"
csv = "1.3"


[lib]
name = "rite_csv"
crate-type = ["dylib"]
