[package]
name = "rite_csv"
version = "0.1.0"
edition = "2021"

[dependencies]
model = { git = "https://github.com/CIAO-systems/rite-lib-model.git" }
import = { git = "https://github.com/CIAO-systems/rite-lib-import.git" }
export = { git ="https://github.com/CIAO-systems/rite-lib-export.git" }
log = "0.4"
csv = "1.3"


[lib]
name = "rite_csv"
crate-type = ["dylib"]

[dev-dependencies]
tempfile = "3.20.0"
