[package]
name = "rite_llm"
version = "0.1.0"
edition = "2024"

[dependencies]
model = { git = "https://github.com/CIAO-systems/rite-lib-model.git" }
import = { git = "https://github.com/CIAO-systems/rite-lib-import.git" }
log = "0.4"
rig-core = "0.12.0"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
regex = "1.11.1"
serde_json = "1.0.140"

[lib]
name = "rite_llm"
crate-type = ["dylib"]

[dev-dependencies]
dotenv = "0.15.0"

