[package]
name = "rite_mariadb"
version = "0.1.0"
edition = "2024"
description = "RITE MariaDB/MySQL importer and exporter"
readme = "README.md"
repository = "https://github.com/CIAO-systems/rite"
license = "Apache-2.0"

[lib]
name = "rite_mariadb"
crate-type = ["dylib"]

[dependencies]
model = { git = "https://github.com/CIAO-systems/rite-lib-model.git", branch = "main" }
mysql = { version = "*"}
