[package]
name = "rite_postgres"
version = "0.1.0"
edition = "2021"
description = "RITE postgres importer and exporter"
readme = "README.md"
repository = "https://github.com/CIAO-systems/rite"
license = "Apache-2.0"


[dependencies]
model = { git = "https://github.com/CIAO-systems/rite-lib-model.git" }
import = { version="0.1.0", path="../../../libraries/import" }
export = { version="0.1.0", path="../../../libraries/export" }
helper = { git = "https://github.com/CIAO-systems/rite-lib-helper.git" }

serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.5"
postgres = "0.19.9"
chrono = "0.4.39"
bytes = "1.9"
log = "0.4"
log4rs = "1.3"

[lib]
name = "rite_postgres"
crate-type = ["dylib"]
