[package]
name = "rite_postgres"
version = "0.1.0"
edition = "2024"
description = "RITE postgres importer and exporter"
readme = "README.md"
repository = "https://github.com/CIAO-systems/rite"
license = "Apache-2.0"


[dependencies]
model = { git = "https://github.com/CIAO-systems/rite-lib-model.git", branch = "main" }

serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.8"
postgres = { version = "0.19", features = ["with-chrono-0_4"] } 
chrono = "0.4"
bytes = "1.9"
log = "0.4"
log4rs = "1.3"
rust_decimal = { version="1.38", features = ["db-postgres", "macros"]}

[lib]
name = "rite_postgres"
crate-type = ["dylib"]

[dev-dependencies]
postgresql_embedded = { version ="0.19.0", features = ["bundled", "blocking"] }
tempfile = "3.22.0"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.18.1", features = ["v4"] }

