[package]
name = "rite_rest"
version = "0.1.1"
edition = "2021"
description = "RITE REST importer"
readme = "README.md"
repository = "https://github.com/CIAO-systems/rite"
license = "Apache-2.0"


[dependencies]
model = { version="0.1", path="../../../libraries/model" }
import = { version="0.1.0", path="../../../libraries/import" }

log = "0.4"
reqwest = { version = "0.12", features = ["blocking", "json"] }
json_dotpath = "1.1"
serde_json = "1.0"

[lib]
name = "rite_rest"
crate-type = ["dylib"]

[dev-dependencies]
mockito = "1.6.1"
uuid = { version="1.15.1", features=["v4"]}
