[package]
name = "rite_ciao"
version = "0.1.0"
edition = "2021"

[dependencies]
model = { git = "https://github.com/CIAO-systems/rite-lib-model.git", branch = "main" }
grpc-utils-rs = { git="https://github.com/CIAO-systems/grpc-utils-rs" }
ciao-rs = {version = "0.1", path = "ciao-rs"}

log = "0.4"
prost = "0.13"
tonic = "0.12"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
prost-types = "0.13"
chrono = "0.4"
uuid = { version = "1.17.0", features = ["v4"] }

[dev-dependencies]
dotenv = "0.15"

[lib]
name = "rite_ciao"
crate-type = ["dylib"]
