[package]
name = "ciao-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
grpc-utils-rs = { git="https://github.com/CIAO-systems/grpc-utils-rs" }

tonic = { version="0.12", features=["tls-roots"] }
prost = "0.13"
prost-types = "0.13"
log = "0.4"
chrono = "0.4"
chrono-tz = "0.10"
futures = "0.3.31"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.17"
iana-time-zone = "0.1.61"


[dev-dependencies]
tokio = "1"
uuid = { version = "1.13", features = ["v4"] }


[build-dependencies]
tonic-build = {version = "0.12", features=["prost"]}

